<resources>
    <string name="app_name">Loading Status</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Download Manager</string>
    <string name="notification_description">Your download report is ready</string>
    <string name="notification_button">View report</string>

    <string name="button_download_text">Download</string>
    <string name="button_complete_text">Done</string>
    <string name="button_loading_text">Downloading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="rb_glide_text">Glide - Image Loading Library</string>
    <string name="rb_app_text">App - Starter code for this project</string>
    <string name="rb_retrofit_text">Retrofit - Type-Safe Http Client</string>
    <string name="choose_rb_element">Select an element to download</string>
    <string name="notification_channel_name">Downloads</string>
    <string name="unknown">Unknown</string>
    <string name="status">Status</string>
    <string name="name_of_the_file">Name of the file</string>
    <string name="filename">Filename</string>
    <string name="success">success</string>
    <string name="fail">failed</string>
    <string name="back">Back</string>
</resources>
